refactoring table morfo corporal and protocolos dobras

--- a/src/app/avaliation/av-dash/av-dash.component.html
+++ b/src/app/avaliation/av-dash/av-dash.component.html
@@ -75,8 +75,13 @@
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
+                    <mat-card-header routerLink="/ic/">
+                        <mat-card-subtitle i18n="Subtitle">Indice de Conicidade</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
                     <mat-card-header routerLink="/st/">
-                        <mat-card-subtitle i18n="Subtitle">Soma Tipo</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Somatotipo</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
             </mat-expansion-panel>
