--- a/src/app/avaliation/componente-morfologica/st/st.component.html
+++ b/src/app/avaliation/componente-morfologica/st/st.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h1 i18n>Soma Tipo</h1>
+        <h1 i18n>Somatotipo</h1>
     </div>
 
     <div class="section">
@@ -41,9 +41,9 @@
                         <th i18n class="sub-line">Dobras Cutâneas</th>
                     </tr>
                     <tr>
-                        <th i18n>Tríceps <small>(mm)</small></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].triceps}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].triceps}}</td>
+                        <th i18n>Tríciptal <small>(mm)</small></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal}}</td>
                     </tr>
                     <tr>
                         <th i18n>Subescapular <small>(mm)</small></th>
