--- a/src/app/avaliation/antropometria/tran-weltman/tran-weltman.component.html
+++ b/src/app/avaliation/antropometria/tran-weltman/tran-weltman.component.html
@@ -4,6 +4,9 @@
     </div>
     <div class="section">
         <form #f="ngForm" (submit)="save(f.value)">
+            <input type="hidden"  name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura">
+            <input type="hidden"  name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso">
+            <input type="hidden"  name="idade" #idade="ngModel" [(ngModel)]="newEvaluation.idade">
             <table>
                 <thead>
                     <tr>
@@ -26,7 +29,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th><span>Cintura</span></th>
+                        <th i18n><span (click)="openHelpDialog('Cintura')">Cintura</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].cintura}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].cintura}}</td>
                         <td *ngIf="addEval">
@@ -35,7 +38,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>Quadril</th>
+                        <th i18n><span (click)="openHelpDialog('Quadril')">Quadril</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].quadril}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].quadril}}</td>
                         <td *ngIf="addEval">
@@ -47,10 +50,7 @@
                         <th>Altura</th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].altura}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].altura}}</td>
-                        <td *ngIf="addEval">
-                        <input name="quadril" #quadril="ngModel" [(ngModel)]="newEvaluation.quadril" type="number"
-                            step="0.1" placeholder="cm">
-                        </td>
+                        <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
                         <th>Idade</th>
