--- a/src/app/avaliation/dobras/jp3/jp3.component.html
+++ b/src/app/avaliation/dobras/jp3/jp3.component.html
@@ -4,6 +4,8 @@
     </div>
     <div class="section">
         <form #f="ngForm" (submit)="save(f.value)">
+            <input type="hidden"  name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura">
+            <input type="hidden"  name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso">
             <table>
                 <thead>
                     <tr>
@@ -25,7 +27,7 @@
                 </thead>
                 <tbody>
                     <tr *ngIf="student.sexo == 'M'">
-                        <th i18n>Peitoral</th>
+                        <th i18n><span (click)="openHelpDialog('Peitoral')">Peitoral</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].peitoral}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].peitoral}}</td>
                         <td *ngIf="addEval">
@@ -34,7 +36,7 @@
                         </td>
                     </tr>
                     <tr *ngIf="student.sexo == 'F'">
-                        <th i18n>Triciptal</th>
+                        <th i18n><span (click)="openHelpDialog('Triciptal')">Triciptal</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal}}</td>
                         <td *ngIf="addEval">
@@ -43,7 +45,7 @@
                         </td>
                     </tr>
                     <tr *ngIf="student.sexo == 'M'">
-                        <th i18n>Abdominal</th>
+                        <th i18n><span (click)="openHelpDialog('Abdominal')">Abdominal</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdominal}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].abdominal}}</td>
                         <td *ngIf="addEval">
@@ -52,7 +54,7 @@
                         </td>
                     </tr>
                     <tr *ngIf="student.sexo == 'F'">
-                        <th i18n>Suprailiaca</th>
+                        <th i18n><span (click)="openHelpDialog('Suprailiaca')">Suprailiaca</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].suprailiaca}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].suprailiaca}}</td>
                         <td *ngIf="addEval">
@@ -61,7 +63,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>Coxa</th>
+                        <th i18n><span (click)="openHelpDialog('Coxa')">Coxa</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].crural}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].crural}}</td>
                         <td *ngIf="addEval">
@@ -70,7 +72,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>Media</th>
+                        <th i18n><span (click)="openHelpDialog('Media')">Media</span></th>
                         <td *ngIf="pointer>=1 && student.sexo=='M'">
                             {{(+evaluation[pointer-1].peitoral + +evaluation[pointer-1].abdominal + +evaluation[pointer-1].crural) / 3 | number : '1.2-2'}}
                         </td>
@@ -86,7 +88,7 @@
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
-                        <th i18n>Somatório</th>
+                        <th i18n><span (click)="openHelpDialog('Somatório')">Somatório</span></th>
                         <td *ngIf="pointer>=1 && student.sexo=='M'">
                             {{+evaluation[pointer-1].peitoral + +evaluation[pointer-1].abdominal + +evaluation[pointer-1].crural | number : '1.2-2'}}
                         </td>
