--- a/src/app/avaliation/dobras/slaugther/slaugther.component.html
+++ b/src/app/avaliation/dobras/slaugther/slaugther.component.html
@@ -4,6 +4,8 @@
     </div>
     <div class="section">
         <form #f="ngForm" (submit)="save(f.value)">
+            <input type="hidden"  name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura">
+            <input type="hidden"  name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso">
             <table>
                 <thead>
                     <tr>
@@ -25,7 +27,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th i18n>Triciptal</th>
+                        <th i18n><span (click)="openHelpDialog('Triciptal')">Triciptal</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal}}</td>
                         <td *ngIf="addEval">
@@ -34,7 +36,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n>Geminal</th>
+                        <th i18n><span (click)="openHelpDialog('Geminal')">Geminal</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].geminal}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].geminal}}</td>
                         <td *ngIf="addEval">
