--- a/src/app/avaliation/av-dash/av-dash.component.html
+++ b/src/app/avaliation/av-dash/av-dash.component.html
@@ -101,12 +101,12 @@
 
                 <mat-card>
                     <mat-card-header routerLink="/flex/">
-                        <mat-card-subtitle i18n="Subtitle">Flexidade</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Flexibilidade</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/frm/">
-                        <mat-card-subtitle i18n="Subtitle">Força e Resistência muscular</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Força e Resistência Muscular</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
             </mat-expansion-panel>
