--- a/src/app/avaliation/dobras/jp3/jp3.component.html
+++ b/src/app/avaliation/dobras/jp3/jp3.component.html
@@ -149,7 +149,7 @@
                 <mat-icon>save</mat-icon>
             </button>
         </div>
-        
+        <!-- charts -->
             <app-chart-pie [values]="single"></app-chart-pie>
             <app-chart-pie [values]="single2"></app-chart-pie>
         </div>
