--- a/src/app/avaliation/flexibilidade/flex-dash/flex-dash.component.html
+++ b/src/app/avaliation/flexibilidade/flex-dash/flex-dash.component.html
@@ -1,12 +1,12 @@
 <div class="container">
     <div class="header">
-        <h3>Flexibilidade - Técnicas utilizadas</h3>
+        <h3>Flexibilidade - Técnicas Utilizadas</h3>
     </div>
 
     <div class="main">
         <mat-card>
             <mat-card-header [routerLink]="['/goniometro/']">
-                <mat-card-subtitle i18n="Subtitle">Goniómetro
+                <mat-card-subtitle i18n="Subtitle">Goniômetro
                 </mat-card-subtitle>
             </mat-card-header>
         </mat-card>
