JP3 refactoring, new functionalities.

--- a/src/app/avaliation/composicao-corporal/cc.component.html
+++ b/src/app/avaliation/composicao-corporal/cc.component.html
@@ -14,57 +14,62 @@
 
                 <mat-card>
                     <mat-card-header routerLink="/slau">
-                        <mat-card-subtitle i18n="Subtitle" >Slaugther 2 dobras</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle" >Slaugther - 2 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/jp3">
-                        <mat-card-subtitle i18n="Subtitle">Jackson & Pollock 3 dobras</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Jackson & Pollock - 3 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/dw4">
-                        <mat-card-subtitle i18n="Subtitle">Durnin & Wormersley 4 dobras</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Durnin & Wormersley - 4 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/sloan2">
-                        <mat-card-subtitle i18n="Subtitle">SLOAN (1967) 2 dobras</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Sloan - 2 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/guedes3">
-                        <mat-card-subtitle i18n="Subtitle">Guedes 3 dobras</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Guedes - 3 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/pb4">
-                        <mat-card-subtitle i18n="Subtitle">Petroski (1995) Brasileiros 4 dobras</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Petroski, Brasileiros - 4 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/carter">
-                        <mat-card-subtitle i18n="Subtitle">Carter 6 dobras</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Carter - 6 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/jp7">
-                        <mat-card-subtitle i18n="Subtitle">Jackson & Pollock 7 dobras</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Jackson & Pollock - 7 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/wb2">
-                        <mat-card-subtitle i18n="Subtitle">Wilmore Behnke 2 dobras</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Wilmore Behnke - 2 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/wb3">
-                        <mat-card-subtitle i18n="Subtitle">Wilmore Behnke 3 dobras</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Wilmore Behnke - 3 dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
                     <mat-card-header routerLink="/will">
-                        <mat-card-subtitle i18n="Subtitle">Williams (1992) 4 dobras</mat-card-subtitle>
+                        <mat-card-subtitle i18n="Subtitle">Williams - 4 dobras</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+                <mat-card>
+                    <mat-card-header routerLink="/all">
+                        <mat-card-subtitle i18n="Subtitle">Todas as Dobras</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
             </mat-expansion-panel>
