--- a/src/app/avaliation/dobras/all-dobras/all-dobras.component.html
+++ b/src/app/avaliation/dobras/all-dobras/all-dobras.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h3 i18n>Petroski  Brasileiros - 4 Dobras</h3>
+        <h3 i18n>Todas as Dobras</h3>
     </div>
     <div class="section">
         <form #f="ngForm" (submit)="save(f.value)">
@@ -27,7 +27,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngIf="sex=='M'">
+                    <tr>
                         <th i18n><span (click)="openHelpDialog('Triciptal')">Triciptal</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal}}</td>
@@ -36,8 +36,8 @@
                                 type="number" step="0.1">
                         </td>
                     </tr>
-                    <tr *ngIf="sex=='M'">
-                        <th i18n><span (click)="openHelpDialog('Subescapular')">Subescapular</span></th>
+                    <tr>
+                        <th i18n><span (click)="openHelpDialog('Subescalar')">Subescalar</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].subescapular}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].subescapular}}</td>
                         <td *ngIf="addEval">
@@ -45,30 +45,21 @@
                                 type="number" step="0.1">
                         </td>
                     </tr>
-                    <tr *ngIf="sex=='F'">
+                    <tr>
+                        <th i18n><span (click)="openHelpDialog('Peitoral')">Peitoral</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].peitoral}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].peitoral}}</td>
+                        <td *ngIf="addEval">
+                            <input name="peitoral" #peitoral="ngModel" [(ngModel)]="newEvaluation.peitoral"
+                                type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
                         <th i18n><span (click)="openHelpDialog('Axilar')">Axilar</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].axilar}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].axilar}}</td>
                         <td *ngIf="addEval">
                             <input name="axilar" #axilar="ngModel" [(ngModel)]="newEvaluation.axilar" type="number"
-                                step="0.1">
-                        </td>
-                    </tr>
-                    <tr *ngIf="sex=='F'">
-                        <th i18n><span (click)="openHelpDialog('Coxa')">Coxa</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].crural}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].crural}}</td>
-                        <td *ngIf="addEval">
-                            <input name="crural" #crural="ngModel" [(ngModel)]="newEvaluation.crural" type="number"
-                                step="0.1">
-                        </td>
-                    </tr>
-                    <tr>
-                        <th i18n><span (click)="openHelpDialog('Geminal')">Geminal</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].geminal}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].geminal}}</td>
-                        <td *ngIf="addEval">
-                            <input name="geminal" #geminal="ngModel" [(ngModel)]="newEvaluation.geminal" type="number"
                                 step="0.1">
                         </td>
                     </tr>
@@ -82,42 +73,48 @@
                         </td>
                     </tr>
                     <tr>
+                        <th i18n><span (click)="openHelpDialog('Abdominal')">Abdominal</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdominal}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].abdominal}}</td>
+                        <td *ngIf="addEval">
+                            <input name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal"
+                                type="number" step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th i18n><span (click)="openHelpDialog('Coxa')">Coxa</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].crural}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].crural}}</td>
+                        <td *ngIf="addEval">
+                            <input name="crural" #crural="ngModel" [(ngModel)]="newEvaluation.crural" type="number"
+                                step="0.1">
+                        </td>
+                    </tr>
+
+                    <tr>
                         <th i18n>Media</th>
-                        <td *ngIf="pointer>=1 && sex=='M'">
-                            {{(+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular
-                          + +evaluation[pointer-1].geminal + +evaluation[pointer-1].suprailiaca) / 4 | number: '1.2-2' }}
-                        </td>
-                        <td *ngIf="pointer>=1 && sex=='F'">
-                            {{(+evaluation[pointer-1].axilar + +evaluation[pointer-1].crural
-                         + +evaluation[pointer-1].geminal + +evaluation[pointer-1].suprailiaca) / 4 | number: '1.2-2' }}
-                        </td>
-                        <td *ngIf="pointer>=0 && sex=='M'">
-                            {{(+evaluation[pointer].triciptal + +evaluation[pointer].subescapular
-                         + +evaluation[pointer].geminal + +evaluation[pointer].suprailiaca) / 4 | number: '1.2-2' }}
-                        </td>
-                        <td *ngIf="pointer>=1 && sex=='F'">
-                            {{(+evaluation[pointer].axilar + +evaluation[pointer].crural
-                         + +evaluation[pointer].geminal + +evaluation[pointer].suprailiaca) / 4 | number: '1.2-2' }}
+                        <td *ngIf="pointer>=1">
+                            {{(+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular + +evaluation[pointer-1].peitoral 
+                               + +evaluation[pointer-1].axilar + +evaluation[pointer-1].suprailiaca + +evaluation[pointer-1].abdominal 
+                               + +evaluation[pointer-1].crural) / 7 | number: '1.2-2'}}</td>
+                        <td *ngIf="pointer>=0">
+                            {{(+evaluation[pointer].triciptal + +evaluation[pointer].subescapular + +evaluation[pointer].peitoral 
+                               + +evaluation[pointer].axilar + +evaluation[pointer].suprailiaca + +evaluation[pointer].abdominal 
+                               + +evaluation[pointer].crural) / 7 | number: '1.2-2'}}
                         </td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
                         <th i18n>Somatório</th>
-                        <td *ngIf="pointer>=1 && sex=='M'">
-                            {{+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular
-                           + +evaluation[pointer-1].geminal + +evaluation[pointer-1].suprailiaca | number: '1.2-2' }}
+                        <td *ngIf="pointer>=1">
+                            {{+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular + +evaluation[pointer-1].peitoral 
+                               + +evaluation[pointer-1].axilar + +evaluation[pointer-1].suprailiaca + +evaluation[pointer-1].abdominal 
+                               + +evaluation[pointer-1].crural | number: '1.2-2'}}
                         </td>
-                        <td *ngIf="pointer>=1 && sex=='F'">
-                            {{+evaluation[pointer-1].axilar + +evaluation[pointer-1].crural
-                          + +evaluation[pointer-1].geminal + +evaluation[pointer-1].suprailiaca | number: '1.2-2' }}
-                        </td>
-                        <td *ngIf="pointer>=0 && sex=='M'">
-                            {{+evaluation[pointer].triciptal + +evaluation[pointer].subescapular
-                          + +evaluation[pointer].geminal + +evaluation[pointer].suprailiaca | number: '1.2-2' }}
-                        </td>
-                        <td *ngIf="pointer>=1 && sex=='F'">
-                            {{+evaluation[pointer].axilar + +evaluation[pointer].crural
-                          + +evaluation[pointer].geminal + +evaluation[pointer].suprailiaca | number: '1.2-2' }}
+                        <td *ngIf="pointer>=0">
+                            {{+evaluation[pointer].triciptal + +evaluation[pointer].subescapular + +evaluation[pointer].peitoral 
+                               + +evaluation[pointer].axilar + +evaluation[pointer].suprailiaca + +evaluation[pointer].abdominal 
+                               + +evaluation[pointer].crural | number: '1.2-2'}}
                         </td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
@@ -167,6 +164,7 @@
                     <mat-icon>save</mat-icon>
                 </button>
             </div>
+
             <app-chart-pie [values]="single"></app-chart-pie>
             <app-chart-pie [values]="single2"></app-chart-pie>
         </div>
