--- a/src/app/avaliation/dobras/dw4/dw4.component.html
+++ b/src/app/avaliation/dobras/dw4/dw4.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h3 i18n>Durnin & Womersley - 4 dobras (1974)</h3>
+        <h3 i18n>Durnin & Womersley - 4 dobras</h3>
     </div>
     <div class="section">
         <form #f="ngForm" (submit)="save(f.value)">
