--- a/src/app/avaliation/dobras/guedes/guedes.component.html
+++ b/src/app/avaliation/dobras/guedes/guedes.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h3 i18n>Guedes - 3 dobras (1994)</h3>
+        <h3 i18n>Guedes - 3 dobras</h3>
     </div>
     <div class="section">
         <form #f="ngForm" (submit)="save(f.value)">
