--- a/src/app/avaliation/dobras/sloan/sloan.component.html
+++ b/src/app/avaliation/dobras/sloan/sloan.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h3 i18n>SLOAN - 2 dobras (1967)</h3>
+        <h3 i18n>Sloan - 2 dobras</h3>
     </div>
     <div class="section">
         <form #f="ngForm" (submit)="save(f.value)">
