--- a/src/app/avaliation/dobras/will/will.component.html
+++ b/src/app/avaliation/dobras/will/will.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h3 i18n>Williams - 4 dobras (1992)</h3>
+        <h3 i18n>Williams - 4 dobras</h3>
     </div> 
     <div class="section">
      <form #f="ngForm" (submit)="save(f.value)">
