--- a/src/app/commun/dialog-help-db.html
+++ b/src/app/commun/dialog-help-db.html
@@ -2,10 +2,9 @@
 <div mat-dialog-content>
   <p>{{help.info}}</p>
     <img [src]="help.image1" width="200" alt="info">
-    
 </div>
-<div mat-dialog-actions>
-  <button mat-mini-fab color="default" (click)="onNoClick()">Fechar
-    <!-- <mat-icon class="mat-18">close</mat-icon> -->
+<div mat-dialog-actions style="display: flex; justify-content: center;">
+  <button mat-mini-fab color="default" (click)="onNoClick()"><span style="font-size: larger;">X</span>
+    <!-- <mat-icon>close</mat-icon> -->
   </button>
 </div>
