--- a/src/app/commun/dialog-help.html
+++ b/src/app/commun/dialog-help.html
@@ -6,5 +6,5 @@
   </div>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">Fechar</button>
+  <button mat-mini-fab (click)="onNoClick()"><mat-icon>close</mat-icon></button>
 </div>
