indice conicidade imgaem

--- a/src/app/avaliation/componente-morfologica/indice-conicidade/indice-conicidade.component.html
+++ b/src/app/avaliation/componente-morfologica/indice-conicidade/indice-conicidade.component.html
@@ -74,6 +74,12 @@
                         </button>
                     </div>
                 </form>
+
+                <div class="section-info">
+                    <div class="section-info-image">
+                        <img src="./assets/img/IConicidade.png" alt="Indice Conicidade">
+                    </div>
+                </div>
     </div>
 
     <div class="footer">
